--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">John Doe</span>
+          <span class="header__logo-sub">Ariel Gluck</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -87,10 +87,13 @@
         <h1 class="heading-primary">Hi, My name is Ariel Gluck</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            I'm an materials science and engineering student
-            at The Ohio State University. If you're looking for and
-            engineer with interests in biomaterials, polymers, and additive manufacturing,
-             you've come to the right place.
+            Fifth-year materials science engineering major at The Ohio State University with specific interests in biomaterials, 
+            polymers, and additive manufacturing. Engineering experiences include comprehensive projects at 
+            Lawrence Livermore National Laboratory and Ohio State’s Center for Design and Manufacturing Excellence 
+            as well as a remote internship based in Tel Aviv. Ariel is also a competitive student-athlete on the 
+            Ohio State Varsity Fencing team with excellent time-management skills and is ready to be a strong contributor in an 
+            industrial or research role.
+
           </p>
         </div>
         <div class="home-hero__cta">
@@ -126,8 +129,12 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            I'm a materials science and engineering student at The Ohio State University.
-            I'm interested in biomaterials, polymers, and additive manufacturing.
+            Fifth-year materials science engineering major at The Ohio State University with specific interests in biomaterials, 
+            polymers, and additive manufacturing. Engineering experiences include comprehensive projects at 
+            Lawrence Livermore National Laboratory and Ohio State’s Center for Design and Manufacturing Excellence 
+            as well as a remote internship based in Tel Aviv. Ariel is also a competitive student-athlete on the 
+            Ohio State Varsity Fencing team with excellent time-management skills and is ready to be a strong contributor in an 
+            industrial or research role.
           </span>
         </h2>
         <div class="about__content">
@@ -167,7 +174,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Here are some cool projects I've done.
+            Here are some projects I've done.
           </span>
         </h2>
 
